sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:20: error: illegal start of simple expression
} 
^