sort.baseball.SelectBaseball.scala.code
override def run() {
  var nbrB:Int = getBasesAmount();
  var posBABouger:Int = 0;
  var numABouger:Int = 0;
  
  while (!isSorted()) {
    posBABouger = (getHoleBase()-1);
    if (posBABouger == -1) {
      posBABouger = nbrB-1
    }
    
    numABouger = longerWay(nbrB, posBABouger)
    move(posBABouger,numABouger)
  }
  
}

def trouveBaseJoueur(base:Int, nbrB:Int){
  for (i<-0 to nbrB)
}